<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.NewStoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/color_main"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/pink_oval"
            android:src="@drawable/button_back"
            android:contentDescription="@string/img_desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/upload"
            android:layout_marginStart="13dp"
            android:textSize="17sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/img_picture"
            android:layout_width="match_parent"
            android:layout_height="389dp"
            android:contentDescription="@string/img_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/default_story" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/share_loc"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_location"
                android:textColor="@color/main_text"
                android:textSize="15sp" />

        </LinearLayout>

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/pink_button"
            android:text="@string/galery" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:background="@drawable/pink_button"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="17dp"
        android:paddingBottom="9dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TouchTargetSizeCheck"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="top|start"
            android:hint="@string/description"
            android:padding="9dp"
             />
    </LinearLayout>

    <Button

        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pink_button"
        android:text="@string/upload"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_margin="17dp"

        />

</LinearLayout>
