<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".account.SignUpFragment">

    <ImageView
        android:id="@+id/ivLogoDicoding"
        android:layout_width="161dp"
        android:layout_height="161dp"
        android:src="@drawable/dicoding_story"
        android:contentDescription="@string/img_desc"
        android:layout_marginTop="91dp"
        android:alpha="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/main_text"
        android:textSize="32sp"
        android:alpha="0"
        android:layout_marginTop="53dp"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoDicoding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/llName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/box_line"
        android:layout_marginEnd="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="17dp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
        android:layout_marginStart="31dp">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_desc"
            android:layout_marginVertical="11dp"
            android:layout_marginStart="13dp"
            android:src="@drawable/name_sign_up"
            app:tint="@color/color_main"/>

        <EditText
            android:id="@+id/ed_register_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:importantForAutofill="no"
            android:hint="@string/name"
            android:textSize="15sp"
            android:textColor="@color/main_text"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="13dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/box_line"
        android:layout_marginTop="17dp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@+id/llName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email_icon"
            app:tint="@color/color_main"
            android:contentDescription="@string/img_desc"
            android:layout_marginVertical="11dp"
            android:layout_marginStart="13dp" />

        <EditText
            android:id="@+id/ed_register_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/email"
            android:textSize="15sp"
            android:textColor="@color/main_text"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:autofillHints=""
            android:layout_marginEnd="13dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/box_line"
        android:layout_marginTop="15dp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@+id/llEmail"
        app:layout_constraintStart_toStartOf="@+id/llEmail"
        app:layout_constraintEnd_toEndOf="@+id/llEmail"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password_icon"
            app:tint="@color/color_main"
            android:contentDescription="@string/img_desc"
            android:layout_marginVertical="11dp"
            android:layout_marginStart="13dp" />

        <EditText
            android:id="@+id/ed_register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/password"
            android:textSize="15sp"
            android:textColor="@color/main_text"
            android:inputType="textPassword"
            android:autofillHints=""
            android:layout_marginEnd="13dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@+id/linear_password"
        app:layout_constraintEnd_toEndOf="@+id/linear_password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/main_text"
            android:textSize="12sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvToSignIn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn_small"
            android:textColor="@color/color_main"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/pink_button"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:alpha="0"
        android:enabled="false"
        android:paddingHorizontal="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
